[package]
name = "rpn"
version = "0.1.0"
authors = ["Siborgium <antivirus147k@gmail.com>"]
edition = "2018"

[lib]
name = "defines"
path = "src/defines.rs"

[[bin]]
name = "rpn-eval"
path = "src/rpn-eval.rs"

[[bin]]
name = "rpn-encode"
path = "src/rpn-encode.rs"

[[bin]]
name = "rpn-gen"
path = "src/rpn-gen.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
debug = false
incremental = false
overflow-checks = false
debug-assertions = false

[features]
default = ["f32"]
f32 = []
f64 = []
u32 = []
u64 = []

[dependencies]
rand = "0.3"
